# AdventofCode

./: .gitignore  Day1  Day1.rs  README.md
Day 1/: Day1  Day1.rs  Day1Input.txt
Day 10/: Day10  Day10.rs
Day 11/: Day11  Day11.rs
Day 12/: Day12  Day12.rs
Day 13/: Day13  Day13.rs
Day 14/: Day14  Day14.rs
Day 15/: Day15  Day15.rs  Day15Other  Day15Other.rs
Day 16/: Day16  Day16.rs  Day16Test.txt
Day 16 TS/: Day16.js  Day16.ts
Day 17/: Day17  Day17.rs
Day 2/: Day2  Day2.rs  Day2Test.txt
Day 21/: Day21  Day21.rs
Day 3/: Day3  Day3.rs
Day 4/: Day4  Day4.rs
Day 5/: Day5  Day5.rs
Day 6/: Day6  Day6.rs
Day 7/: Day7  Day7.rs
Day 8/: Day8  Day8.rs
Day 9/: Day9  Day9.rs
day1/: a.out  day1.hi  day1.hs  day1p1.c  day1p2.c  llist.c  llist.h  test.txt
day10/: day10.cabal  hie.yaml
day11/: day11.cabal  hie.yaml
day11/app/: Main.hs
day11/src/: main.rs
day11c/: Cargo.toml
day12/: test2.txt
day12c/: Cargo.toml
day13/: Cargo.toml
day14c/: Cargo.toml
day15/: Cargo.toml
day15c/: Cargo.toml
day1ts/: index.ts  package-lock.json  package.json
day2/: Cargo.toml  day2.cabal  day2.hs  day2p1.c  day2p2.c  hie.yaml
day2c/: Cargo.toml
day3/: day3.cabal  day3p1.c  day3p2.c  hie.yaml
day3c/: Cargo.toml
day4/: Cargo.toml  build.sbt  day4.cabal  day4p1.c  day4p2.c  hie.yaml
day4c/: Cargo.toml
day5/: Cargo.toml  build.sbt  day5.cabal  day5p1.c  day5p2.c  hie.yaml  md5.c  md5.h
day5c/: Cargo.toml  test.py
day6/: Cargo.toml  build.sbt  day6.cabal  day6p1.c  day6p2.c  (+1 more)
day8/: day8.cabal  hie.yaml  main.kt
day8/app/: Main.hs
(+53 files in other folders)
